fixed z-index for landing page and decresed height on mobile view

--- a/style.css
+++ b/style.css
@@ -133,3 +133,9 @@ footer a {
     text-decoration: none;
     color: white;
 }
+
+@media screen and (max-width: 768px) {
+    .hero {
+        height: 80vh;
+    }
+}
